# numerical-methods-pbp

./: .gitignore  README.md  pyproject.toml
docs/md/: backlog.md  metodo_analitico.md  metodo_analitico_exercicios.md  metodo_grafico.md  prompt01.md  prompt02.md  relatorio_relevancia_pdfs.md  roadmap_completo.md
docs/pdf/listas_problemas/: 2018_calculo numerico computacional_codigos em matlab.rar  Derivada Numérica.md  ESTUDO DE EDOS E CALCULO NUMERICO.docx  Métodos Numéricos Aplicados a Solução de Equações Diferenciais.md  Referências Bibliográficas.md  Sistema de EDOs - SimulTech 3.py  Sistema de Equacões Lineares - SimulTech.py  Sistema de Equacões Não Lineares - SimulTech (1).py  ajuste.c  derivada_funcao1.m  derivada_funcao2.m  derivada_funcao3.m  derivada_funcao4.m  derivada_funcao5.m  derivada_funcao6.m  derivada_funcao7.m  derivada_funcao8.m  equacoes diferenciais.txt  exemplo_interpolacao.m  integracao numerica.txt  interpolacao.txt  lista8_edo_questao1.ods  lista8_edo_questao1.py  lista8_edo_questao2.ods  lista8_edo_questao2.py  lista8_edo_questao3.py  sistemas lineares.txt  sistemas nao lineares.txt
src/: main.py
src/algorithms/roots/: analytical_method.py  bolzano_method.py  graphical_method.py  incremental_search_method.py  table_method.py  trial_and_error_method.py
src/controllers/: roots_controller.py
src/domain/: functions.py
src/interfaces/: numerical_method.py
src/tests/: test_analytical_method.py  test_errors.py  test_graphical_method.py
src/utils/: plotter.py
src/views/: analytical_view.py  graphical_view.py
(+11 files in other folders)
